# OMail

./: .coverage  .coveragerc  .env  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: concepts.md  index.md  message-flow.md  runtime.md  self-hosting.md  triple-ratchet.md  upa.md  wiki.html  zero-knowledge-hosting.md
scripts/: browser_e2e.js  browser_e2e_admin.js  browser_e2e_devicekey.js  browser_e2e_devicelink.js  browser_e2e_guest.js  browser_e2e_peer.js
src/: KeyPair.py  key_pair.py  onion_service.py
src/omail/: __init__.py  cli.py  db.py  federation.py  host.py  key_pair.py  migration.py  onion_service.py  qr.py  server.py  upa.py  webauthn.py
src/omail/crypto/: __init__.py  convert.py  kem.py  triple_ratchet.py
src/omail/static/: app.js  crypto.js  index.html  style.css  vendor.js
tests/: conftest.py  js_interop_driver.js  soft_authenticator.py  test_cli.py  test_db.py  test_encryption.py  test_js_interop.py  test_kem.py  test_key_pair.py  test_onion_service.py  test_server.py  test_triple_ratchet.py  test_upa.py  test_webauthn.py
